# ACN

./: .env.production.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  REFACTOR_PLAN.md  STRUCTURE_AUDIT.md  docker-compose.yml  env.example  pyproject.toml  pyrightconfig.json  railway.json
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  smoke-backend-integration.yml
acn/: __init__.py  a2a_integration.py  api.py  config.py  models.py  registry.py
acn/a2a/: __init__.py  redis_task_store.py
acn/auth/: __init__.py  middleware.py
acn/communication/: message_router.py  subnet_manager.py  websocket_manager.py
acn/core/entities/: __init__.py  agent.py  subnet.py  task.py
acn/core/exceptions/: __init__.py
acn/core/interfaces/: __init__.py  activity_repository.py  agent_repository.py  billing_repository.py  escrow_provider.py  subnet_repository.py  task_repository.py
acn/infrastructure/: task_pool.py
acn/infrastructure/messaging/: __init__.py  broadcast_service.py  message_router.py  subnet_manager.py  websocket_manager.py
acn/infrastructure/persistence/postgres/: __init__.py  activity_repository.py  agent_repository.py  billing_repository.py  database.py  models.py  subnet_repository.py  task_repository.py
acn/infrastructure/persistence/redis/: __init__.py  agent_repository.py  registry.py  subnet_repository.py  task_repository.py
acn/monitoring/: __init__.py  analytics.py  audit.py  metrics.py
acn/payments/: __init__.py  core.py  webhook.py
acn/protocols/a2a/: server.py  task_store.py
acn/protocols/ap2/: __init__.py  core.py  webhook.py
acn/routes/: __init__.py  analytics.py  communication.py  dependencies.py  monitoring.py  onboarding.py  onchain.py  payments.py  registry.py  subnets.py  tasks.py  websocket.py
acn/routes/routes/: __init__.py  analytics.py  communication.py  monitoring.py  payments.py  registry.py  subnets.py  websocket.py
acn/schemas/: __init__.py
acn/services/: __init__.py  activity_service.py  agent_service.py  auth0_client.py  billing_service.py  erc8004_client.py  escrow_client.py  message_service.py  rewards_client.py  subnet_service.py  task_service.py  wallet_client.py
acn/services/abis/: IdentityRegistry.json
alembic/: env.py
alembic/versions/: 8d958bd38c11_initial_schema.py  a1b2c3d4e5f6_add_agent_wallet_fields.py
clients/python/: CHANGELOG.md  README.md  pyproject.toml
clients/python/acn_client/: __init__.py  client.py  models.py  realtime.py
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json
clients/typescript/src/: client.ts  index.ts  realtime.ts  types.ts
docs/: ARCHITECTURE_FINAL.md  ARCHITECTURE_PROPOSAL.md  CLEAN_ARCHITECTURE_STATUS.md  REFACTORING_SUMMARY.md  REFACTOR_AUDIT_REPORT.md  a2a-integration.md  api.md  architecture.md  federation.md  operations-acn-backend.md
docs/reviews/: ARCHITECTURE_REVIEW.md  REFACTOR_PLAN.md  STRUCTURE_AUDIT.md
monitoring/: alerts.yml  prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/dashboards/json/: acn-overview.json
monitoring/grafana/provisioning/datasources/: datasources.yml
public/: skill.md
scripts/: migrate_agents.py  migrate_redis_to_pg.py  smoke_backend_integration.py
skills/acn/: SKILL.md
skills/acn/scripts/: register_onchain.py
tests/: __init__.py  conftest.py  test_a2a_actions.sh  test_api.py  test_communication.py  test_monitoring.py  test_payments.py  test_registry.py  test_subnet_manager.py
tests/core/: test_agent.py  test_task.py
tests/services/: test_agent_service.py  test_task_service.py
