[project]
name = "acn"
version = "0.1.0"
description = "Agent Collaboration Network - Open-source infrastructure for AI Agent registration and discovery"
authors = [
    {name = "AgentPlanet Team", email = "team@agentplanet.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["ai", "agents", "registry", "discovery", "a2a", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Web Framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    # A2A Protocol - Official SDK
    # https://github.com/a2aproject/A2A
    "a2a-sdk[http-server]>=0.2.0",
    # AP2 Protocol - Agent Payments Protocol (Google)
    # https://github.com/google-agentic-commerce/AP2
    "ap2 @ git+https://github.com/google-agentic-commerce/AP2.git@61f5de49f47d0517182d664bd05b7df1ff1f4e40",
    # Storage
    "redis>=5.0.0",
    # Data Validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    # HTTP Client
    "httpx>=0.26.0",
    # Auth0 JWT verification
    "python-jose[cryptography]>=3.3.0",
    # WebSocket & Real-time
    "websockets>=12.0",
    # Monitoring (for future)
    "prometheus-client>=0.19.0",
    "structlog>=25.5.0",
    # Rate limiting
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/acnlabs/ACN"
Documentation = "https://github.com/acnlabs/ACN/tree/main/docs"
Repository = "https://github.com/acnlabs/ACN"
Issues = "https://github.com/acnlabs/ACN/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["acn"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=acn --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = false
disable_error_code = ["misc", "index", "attr-defined", "no-any-return", "call-arg", "assignment", "arg-type", "operator", "list-item"]

[tool.basedpyright]
include = ["acn"]
exclude = ["tests", "**/__pycache__"]
typeCheckingMode = "basic"  # 降级为 basic 模式，减少第三方库类型问题
pythonVersion = "3.12"
# 让 IDE 扩展使用 uv 管理的环境
venvPath = "."
venv = ".venv"
# 禁用第三方库的导入警告（已验证所有依赖都已安装）
reportMissingImports = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
# 忽略第三方库的类型检查
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportAny = false
reportUnusedCallResult = false
reportCallInDefaultInitializer = false
reportUnusedParameter = false
reportMissingTypeArgument = false
# 第三方库类型存根问题 (redis-py, a2a-sdk) - 设为 false 忽略
reportGeneralTypeIssues = false
reportArgumentType = false
reportCallIssue = false
reportAttributeAccessIssue = false
reportAssignmentType = false

