[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acn-client"
version = "0.1.0"
description = "Official Python client for ACN (Agent Collaboration Network)"
readme = "README.md"
license = "MIT"
authors = [
    { name = "ACNet-AI", email = "team@acnet.ai" }
]
keywords = ["acn", "agent", "ai", "collaboration", "a2a", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ACNet-AI/ACN"
Documentation = "https://github.com/ACNet-AI/ACN#readme"
Repository = "https://github.com/ACNet-AI/ACN.git"
Issues = "https://github.com/ACNet-AI/ACN/issues"

[tool.hatch.build.targets.wheel]
packages = ["acn_client"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
ignore_missing_imports = true
disable_error_code = ["misc", "no-any-return"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

